fix white key spacing issue by setting black keys position to absolute, and positioning them individually

--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,7 @@ body {
   display: flex;
   flex-direction: row;
   justify-content: center;
+  position: relative;
 }
 
 .key, .black {
@@ -45,8 +46,28 @@ body {
 	box-shadow:-1px -1px 2px rgba(255,255,255,0.2) inset, 0 -5px 2px 3px rgba(0,0,0,0.6) inset, 0 2px 4px rgba(0,0,0,0.5);
 	background:linear-gradient(45deg, #222 0%,#555 100%);
   color: rgba(235,245,225,1);
-  position: relative;
   left: 0.5em;
+  position: absolute;
+}
+
+.Db {
+  left: 11em;
+}
+
+.Eb {
+  left: 14em;
+}
+
+.Gb {
+  left: 20em;
+}
+
+.Ab {
+  left: 23em;
+}
+
+.Bb {
+  left: 26em;
 }
 .pressed {
   border-top:1px solid #777;
